--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,13 +7,13 @@
 body {
     background-color: hsl(60, 68%, 95%);
     font-family: "Kalam", cursive;
-
 }
 .nav-bar {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    max-width: 100%;
     padding: 20px 25px;
     box-shadow: 0 3px 6px rgb(239, 240, 222);
 }
