--- a/accounts/templates/accounts/base.html
+++ b/accounts/templates/accounts/base.html
@@ -6,8 +6,8 @@
     <title>{% block title %} Tasteyy {% endblock %}</title>
 
     {% load static %}
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="{% static 'static/css/style.css' %}"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="{% static 'accounts/css/style.css' %}">
 </head>
 <body>
     
