--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -3,7 +3,7 @@
 {% block title %}Log In {% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="login-container">
 	<h3> Log In </h3>
 	<div class="body">
 		{% if messages %}
