--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,9 @@
     {% load static %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    {% block extra_css %}{% endblock %}    
 </head>
+
 <body>
     <header>
         <nav class="nav-bar">
